--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.7",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.8.4",
+    "node-cache": "^5.1.2",
     "node-schedule": "^2.1.1"
   },
   "scripts": {
