--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
-    "moment-timezone": "^0.5.46",
+    "luxon": "^3.5.0",
     "mongoose": "^8.8.4",
     "node-cache": "^5.1.2",
     "node-schedule": "^2.1.1"
